Merged master + fixes for java 8